--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -367,6 +367,24 @@ main {
     flex-direction: column;
 }
 
+.project_language_badge{
+    display: flex; 
+    align-items: center; 
+    gap: 0.5rem; 
+    margin-bottom: 0.5rem;
+}
+
+.project_language_dot{
+    width: 0.75rem; 
+    height: 0.75rem; 
+    border-radius: 50%; 
+}
+
+.project_language_name{
+    font-size: 0.875rem; 
+    color: var(--gray-400);
+}
+
 .project_content h3 {
     font-size: 1.25rem;
     font-weight: 700;
@@ -677,13 +695,10 @@ footer {
 ======================================== */
 
 @media screen and (max-width: 480px) {
+
     /* Menu */
     .menu_list {
         display: none;
-    }
-
-    #titulo a {
-        font-size: 1.5rem;
     }
 
     /* Hero */
@@ -879,6 +894,7 @@ footer {
     .contact_info h3 {
         font-size: 2rem;
         margin-bottom: 1rem;
+        text-align: center;
     }
 
     .contact_info p {
